--- a/ruby/action-cable-server/Gemfile
+++ b/ruby/action-cable-server/Gemfile
@@ -41,3 +41,23 @@ end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
+
+gem 'memory_profiler'
+
+gem "oink"
+
+# gem 'peek'
+
+# gem 'peek-gc'
+
+gem 'stackprof', '~> 0.2.7'
+
+gem 'rack-mini-profiler'
+
+gem 'flamegraph'
+
+gem 'fast_stack'    # For Ruby MRI 2.0
+
+gem 'ruby-prof'
+
+# gem 'oneapm_rpm', '~> 1.4.0'
